--- a/frontend/micro-ui/web/package.json
+++ b/frontend/micro-ui/web/package.json
@@ -20,7 +20,7 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@nudmcdgnpm/upyog-css": "1.2.8",
+    "@mcd89/upyog-css": "1.0.1",
     "@nudmcdgnpm/digit-ui-libraries": "1.2.1",
     "@upyog/digit-ui-module-bills": "1.8.0",
     "@upyog/digit-ui-module-common": "1.8.12",
