Disable password encryption in application properties

--- a/core-services/egov-user/src/main/resources/application.properties
+++ b/core-services/egov-user/src/main/resources/application.properties
@@ -98,3 +98,4 @@ digilocker.register=true
 digilocker.search=true
 
 password.encryption.secret=MySuperSecretEncryptionKe123456!
+password.encryption.enabled=false
