--- a/core-services/egov-user/src/main/resources/application.properties
+++ b/core-services/egov-user/src/main/resources/application.properties
@@ -98,4 +98,4 @@ digilocker.register=true
 digilocker.search=true
 
 password.encryption.secret=MySuperSecretEncryptionKe123456!
-password.encryption.enabled=false
+password.encryption.enabled=true
